--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Bahan Belajar Rest API Node, Express dan Mysql",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon index.js"
   },
   "author": "IlhamW",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.0",
+    "nodemon": "^3.1.3",
     "sequelize": "^6.37.3"
   }
 }
